Jobs+ Change Log

==1.0==
Initial Release
==1.0.1
Fix bug require to refresh permalink
==1.0.1.1
Ability to change currency in setting
==1.0.1.2
Add Message Add-On
Fix currency issue in post job page
Fix some translate issue
Fix bug widget title not save
Fix native contact page go 404 after send contact
==1.0.1.3
Fix security issues for my jobs/my profiles page
==1.0.1.4
Fix bug jobs page show no jobs when active Advanced Search
Add helper filters
Fix WYISWYG button styling
Fix bug can contact job poster when no expert profile


